--- a/02_Filtering_&_Sorting/Chipotle/Exercises.ipynb
+++ b/02_Filtering_&_Sorting/Chipotle/Exercises.ipynb
@@ -19,12 +19,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 25,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -42,12 +42,170 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>order_id</th>\n",
+       "      <th>quantity</th>\n",
+       "      <th>item_name</th>\n",
+       "      <th>choice_description</th>\n",
+       "      <th>item_price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Chips and Fresh Tomato Salsa</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>$2.39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Izze</td>\n",
+       "      <td>[Clementine]</td>\n",
+       "      <td>$3.39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Nantucket Nectar</td>\n",
+       "      <td>[Apple]</td>\n",
+       "      <td>$3.39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Chips and Tomatillo-Green Chili Salsa</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>$2.39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Chicken Bowl</td>\n",
+       "      <td>[Tomatillo-Red Chili Salsa (Hot), [Black Beans...</td>\n",
+       "      <td>$16.98</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4617</td>\n",
+       "      <td>1833</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Steak Burrito</td>\n",
+       "      <td>[Fresh Tomato Salsa, [Rice, Black Beans, Sour ...</td>\n",
+       "      <td>$11.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4618</td>\n",
+       "      <td>1833</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Steak Burrito</td>\n",
+       "      <td>[Fresh Tomato Salsa, [Rice, Sour Cream, Cheese...</td>\n",
+       "      <td>$11.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4619</td>\n",
+       "      <td>1834</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Chicken Salad Bowl</td>\n",
+       "      <td>[Fresh Tomato Salsa, [Fajita Vegetables, Pinto...</td>\n",
+       "      <td>$11.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4620</td>\n",
+       "      <td>1834</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Chicken Salad Bowl</td>\n",
+       "      <td>[Fresh Tomato Salsa, [Fajita Vegetables, Lettu...</td>\n",
+       "      <td>$8.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4621</td>\n",
+       "      <td>1834</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Chicken Salad Bowl</td>\n",
+       "      <td>[Fresh Tomato Salsa, [Fajita Vegetables, Pinto...</td>\n",
+       "      <td>$8.75</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4622 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      order_id  quantity                              item_name  \\\n",
+       "0            1         1           Chips and Fresh Tomato Salsa   \n",
+       "1            1         1                                   Izze   \n",
+       "2            1         1                       Nantucket Nectar   \n",
+       "3            1         1  Chips and Tomatillo-Green Chili Salsa   \n",
+       "4            2         2                           Chicken Bowl   \n",
+       "...        ...       ...                                    ...   \n",
+       "4617      1833         1                          Steak Burrito   \n",
+       "4618      1833         1                          Steak Burrito   \n",
+       "4619      1834         1                     Chicken Salad Bowl   \n",
+       "4620      1834         1                     Chicken Salad Bowl   \n",
+       "4621      1834         1                     Chicken Salad Bowl   \n",
+       "\n",
+       "                                     choice_description item_price  \n",
+       "0                                                   NaN     $2.39   \n",
+       "1                                          [Clementine]     $3.39   \n",
+       "2                                               [Apple]     $3.39   \n",
+       "3                                                   NaN     $2.39   \n",
+       "4     [Tomatillo-Red Chili Salsa (Hot), [Black Beans...    $16.98   \n",
+       "...                                                 ...        ...  \n",
+       "4617  [Fresh Tomato Salsa, [Rice, Black Beans, Sour ...    $11.75   \n",
+       "4618  [Fresh Tomato Salsa, [Rice, Sour Cream, Cheese...    $11.75   \n",
+       "4619  [Fresh Tomato Salsa, [Fajita Vegetables, Pinto...    $11.25   \n",
+       "4620  [Fresh Tomato Salsa, [Fajita Vegetables, Lettu...     $8.75   \n",
+       "4621  [Fresh Tomato Salsa, [Fajita Vegetables, Pinto...     $8.75   \n",
+       "\n",
+       "[4622 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chipo = pd.read_csv('Chipotle.tsv',sep='\\t')\n",
+    "chipo"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -58,12 +216,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 27,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Setting item_price as a float\n",
+    "chipo[\"item_price\"] = chipo.item_price.str.slice(start=1).astype(float)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1130"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(chipo[chipo[\"item_price\"]>10])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -76,9 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -92,9 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -107,12 +282,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>order_id</th>\n",
+       "      <th>quantity</th>\n",
+       "      <th>item_name</th>\n",
+       "      <th>choice_description</th>\n",
+       "      <th>item_price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>3598</td>\n",
+       "      <td>1443</td>\n",
+       "      <td>15</td>\n",
+       "      <td>Chips and Fresh Tomato Salsa</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>44.25</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      order_id  quantity                     item_name choice_description  \\\n",
+       "3598      1443        15  Chips and Fresh Tomato Salsa                NaN   \n",
+       "\n",
+       "      item_price  \n",
+       "3598       44.25  "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chipo.sort_values(by=\"item_price\", ascending=False).head(1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -123,12 +352,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "18"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "salad = chipo[chipo.item_name == \"Veggie Salad Bowl\"]\n",
+    "salad.quantity.sum()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -139,33 +380,52 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "soda = chipo[(chipo.item_name == \"Canned Soda\") & (chipo.quantity>1)]\n",
+    "soda.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
